examples/message-queue-integrations/rabbitmq/kubernetes/ingress_services/workflow_funny_joke.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funny-joke-workflow
  namespace: llama-deploy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: funny-joke-workflow
  template:
    metadata:
      labels:
        app: funny-joke-workflow
    spec:
      containers:
        - name: funny-joke-workflow
          image: multi_workflows_app:latest
          imagePullPolicy: Never
          command:
            [
              "sh",
              "-c",
              "python -m multi_workflows_app.deployment.workflow_funny_joke",
            ]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: funny-joke-workflow
  name: funny-joke-workflow
  namespace: llama-deploy-demo
spec:
  selector:
    app: funny-joke-workflow
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funny-joke-workflow
  namespace: llama-deploy-demo
spec:
  rules:
    - host: funny-joke-workflow.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funny-joke-workflow
                port:
                  number: 8000
